--- a/MusicVideo/Base.lproj/Main.storyboard
+++ b/MusicVideo/Base.lproj/Main.storyboard
@@ -80,6 +80,12 @@
                         </barButtonItem>
                     </toolbarItems>
                     <navigationItem key="navigationItem" id="stU-IC-227"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="LFW-sP-wC2">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="7or-xa-Ffj" eventType="valueChanged" id="bMd-D0-1zH"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8CV-Ay-ikH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
